<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_container"
        android:layout_width="wrap_content"
        android:layout_height="392dp"
        android:layout_centerInParent="false"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="24dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_login"
            android:layout_width="335dp"
            android:layout_height="342dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="17dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:padding="24dp">

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="232dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="76dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="31dp"
                    android:text="@string/Login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.684"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="200dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="195dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="12dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintStart_toEndOf="@+id/sign_up_email"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sign_up_email"
                    android:layout_width="59dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/Email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="37dp"
                    android:text="@string/Password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sign_up_email" />

                <TextView
                    android:id="@+id/textViewSignUpLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/SignupMessage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.521"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:layout_width="86dp"
            android:layout_height="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.448"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
